# data_pl_polars_cicd

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml  release_dev_env.yml
config/: dev.yaml  prod.yaml
data/dev/input/: sales.csv
data/dev/silver/sales_daily/: LATEST  run_20260209_192933.json  run_20260209_193058.json  run_20260213_101017.json
data/dev/silver/sales_daily/20260213_101017/: data.parquet
requirements/: base.txt  dev.txt
scripts/: generate_input.py
src/: config.py  lineage.py  pipeline.py
src/steps/: extract.py  load.py  transform.py
tests/: test_lineage.py  test_transform.py
