[tool.poetry]
name = "data_pipeline_ci_cd"
version = "0.1.0"
description = "Data Pipeline CI"
authors = ["ares.argiles@gmail.com"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "23.9.1"
flake8 = "7.0.0"
pytest = "7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"