[tool.poetry]
name = "data_pipeline_ci_cd"
version = "0.1.0"
description = "Data Pipeline CI"
authors = ["ares.argiles@gmail.com"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "3.11"

[tool.poetry.dev-dependencies]
black = "23.9.1"
flake8 = "7.0.0"
flake8-pyproject = "^1.2.3"
pytest = "7.4.2"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
ignore = "E203,W503,E501"
exclude = "tests/*"